--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.2",
     "axios": "^0.26.0",
+    "bootstrap": "^5.1.3",
+    "bootstrap-vue": "^2.21.2",
     "core-js": "^3.8.3",
+    "portal-vue": "^2.1.7",
     "vue": "^2.6.14"
   },
   "devDependencies": {
